Change History
==============

3.3 (unreleased)
----------------

- Nothing changed yet.


3.2 (2009-08-07)
----------------

- Refactor egg faking; fix skipped eggs to avoid to remove skipped
  develop eggs
  [gotcha]


3.1 (2009-06-23)
----------------

- Create download-cache directory when not provided by buildout
  [gotcha, jfroche]

- Change interpreter name in buildout to avoid name clash with an existing interpreter
  [gotcha, jfroche]

3.0 (2009-02-26)
----------------

- Changed the default for fake eggs creation to true and added a number of
  additional fake eggs to the default.
  [hannosch]

2.6 (2008-12-12)
----------------

- Change the fake eggs creation, to fix bug related to egg dependencies
  in develop-eggs.
  [jfroche]

- Added the smart-recompile option.
  [tarek]

- Ignore exit status of compilezpy.py since it returns an
  exit status > 0 for even a single compile failure.
  [smcmahon]

2.5 (2008-11-15)
----------------

- Add compilation of .py files into .pyc using Zope's compilezpy.py.
  [smcmahon]


2.4 (2008-11-04)
----------------

- Allow to use an existing Zope installation by specifying its `location`.
  [stefan]

- Prevent update from ever messing with a shared Zope installation.
  [fschulze]


2.3 (2008-08-27)
----------------

- stderr in svn update is no longer filtered but printed on console.
  [icemac]


2.2 (2008-06-07)
----------------

- Updated `fake-zope-eggs` handling, to be called when updating, so changes
  to `skip-fake-eggs` and add `additional-fake-eggs` are respected.
  [hannosch]

- Added new `skip-fake-eggs` option, that allows to skip the creation of
  fake eggs for a list of packages, so you can for example require a newer
  `zope.tal` version.
  [hannosch]

- Include the Python version Zope is compiled with into the shared-zope name.
  This allows you to have the same Zope version compiled with for example
  Python 2.3 and 2.4 but still share it. The change means, you will have to
  recompile all Zope versions.