@@ -36,6 +36,8 @@ If we run the buildout it returns::
     creating build/...
     creating build/.../AccessControl
     ...
+    Zope2 is setup using : ...
+    ...
 
 Let's have a look at the different folders created::
 
@@ -99,6 +101,8 @@ Now if we run the buildout again::
     creating build
     creating build/...
     creating build/.../AccessControl
+    ...
+    Zope2 is setup using : ...
     ...
 
 The recipe then creates a fake-eggs folder in the buildout:
@@ -207,6 +211,8 @@ additional-fake-eggs option, for example::
     creating build/...
     creating build/.../AccessControl
     ...
+    Zope2 is setup using : ...
+    ...
 
 Let's check if the additional fake egg exists:
 
@@ -241,6 +247,8 @@ If you need to have a specific version of an egg, this can be done like this:
     creating build
     creating build/...
     creating build/.../AccessControl
+    ...
+    Zope2 is setup using : ...
     ...
 
     >>> cat(sample_buildout, 'fake-eggs', 'ZODB3', 'ZODB3.egg-info')
@@ -283,6 +291,8 @@ Let's run the buildout::
     creating build
     creating build/...
     creating build/.../AccessControl
+    ...
+    Zope2 is setup using : ...
     ...
 
 Now if we list all the developed eggs we have:
@@ -371,6 +381,8 @@ Let's run the buildout::
     creating build/...
     creating build/.../AccessControl
     ...
+    Zope2 is setup using : ...
+    ...
 
 Now if we list all the developed eggs we have::
 
@@ -441,13 +453,16 @@ Now if we run the buildout again::
     creating build/...
     creating build/.../AccessControl
     ...
+    Zope2 is setup using : ...
+    ...
 
-And a second time, even if we remove .installed.cfg it is not recompiled::
+And a second time, even if we remove .installed.cfg, it is not recompiled::
 
     >>> import os
     >>> os.remove('.installed.cfg')
     >>> print system(buildout)
     Installing zope2.
+    Zope2 is setup using : ...
     Creating fake eggs
     <BLANKLINE>
 
@@ -478,4 +493,31 @@ Now if we run the buildout again::
     creating build/...
     creating build/.../AccessControl
     ...
+    Zope2 is setup using : ...
+    ...
 
+Let's use the  ``python`` option::
+
+    >>> write('buildout.cfg',
+    ... """
+    ... [buildout]
+    ... parts = zope2
+    ... find-links =
+    ...     http://dist.plone.org/
+    ...
+    ... [zope2]
+    ... recipe = plone.recipe.zope2install
+    ... url = http://www.zope.org/Products/Zope/2.10.6/Zope-2.10.6-final.tgz
+    ... python = python2.4
+    ...
+    ... [python2.4]
+    ... executable = /mypython
+    ... """)
+
+Now if we run the buildout again::
+
+    >>> print system(buildout)
+    Uninstalling zope2.
+    Installing zope2.
+    Zope2 is setup using : /mypython
+    ...
